--- a/04.파이썬으로 미술 작품 만들기.md
+++ b/04.파이썬으로 미술 작품 만들기.md
@@ -33,3 +33,107 @@ exitonclick()
 # 파이썬으로 미술 작품 만들기
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/3a309691-c0ec-4131-9879-f28ec5327c73)   
 ![image](https://github.com/jerrytohub/python-ai/assets/127598703/876e3348-138d-439d-8c32-7095d6f5d8f1)
+
+# 재귀함수로 멋진 그림 그리기
+## 재귀함수 이해하기
+* 자기 자신을 호출하는 함수입니다.
+* 멈추는 코드가 없으면 계속 반복합니다.
+```python
+from time import sleep
+
+def recursion():
+	print("재귀함수입니다.")
+	sleep(0.01)
+	recursion()
+	
+recursion()
+```	
+
+## 나무 모양 그리기 1
+```python
+from turtle import *
+
+Turtle()
+bgcolor("black") 
+color("yellow")
+speed(100)
+
+def draw_tree(length):
+    if length > 1:
+        forward(length)
+        right(45)
+        draw_tree(length/2)
+        left(90)
+        draw_tree(length/2)
+        left(135)
+        forward(length)
+        left(180)
+
+left(90)
+draw_tree(100)
+exitonclick()
+```
+
+## 나무 모양 그리기 2
+* 나뭇가지 색깔과 나뭇잎 색깔을 칠합니다.
+* 나뭇가지 사이의 각도를 다르게 합니다.
+```python
+from turtle import *
+
+Turtle()
+bgcolor("white") 
+color("#89600F")
+speed(100)
+
+def draw_tree(length):
+    if length > 1:
+        if length < 2:
+            color("#0BA916") #잎 색깔
+        else:
+            color("#89600F") #가지 색깔
+        forward(length)
+        right(30)
+        draw_tree(length/1.5)
+        left(60)
+        draw_tree(length/1.5)
+        left(150)
+        forward(length)
+        left(180)
+        color("#89600F")
+
+left(90)
+draw_tree(100)
+exitonclick()
+```
+
+## 사이핀스키 삼각형 그리기
+* 일정 길이 이하면 삼각형을 그립니다.
+* 일정 길이를 넘으면 재귀함수로 삼각형을 그립니다.
+```python
+from turtle import *
+
+Turtle()
+bgcolor("black") 
+color("yellow")
+speed(100)
+
+def draw_triangle(length):
+    if length > 10:
+        draw_triangle(length/2)
+        forward(length/2)
+        draw_triangle(length/2)
+        left(120)
+        forward(length/2)
+        right(120)
+        draw_triangle(length/2)
+        right(120)
+        forward(length/2)
+        left(120)
+    else:
+        for i in range(3):
+            forward(length)
+            left(120)
+            
+draw_triangle(100)
+exitonclick()
+```
