--- a/06.자동 설문조사 프로그램.md
+++ b/06.자동 설문조사 프로그램.md
@@ -6,6 +6,7 @@
 * 오류가 나는 경우 ```pyscreeze 폴더 안에 init 파일```을 수정합니다.
 * ```~Lib\site-packages\``` 안에 설치된 모듈을 확인할 수 있습니다.
 * https://github.com/asweigart/pyscreeze/blob/master/pyscreeze/__init__.py
+    * 여기 있는 코드를 복사해서 붙여 넣습니다. 
 
 ## pyautogui 함수 알아보기
 * position() : 마우스의 위치를 알 수 있습니다.
