--- a/06.자동 설문조사 프로그램.md
+++ b/06.자동 설문조사 프로그램.md
@@ -26,6 +26,7 @@ pyautogui.hotkey('win', 'r') #윈도우+R키로 실행창 띄우기
 ```
 * write("내용") : 내용을 입력합니다.
 * typewrite("내용", 시간) : 정한 시간만큼 타이핑을 합니다.
+   * 시간을 입력하지 않으면 한 번에 씁니다. 
 * press("키이름") : 해당 키를 누릅니다.
   * "\t" 또는 "tab" : Tab키
   * "space" : 스페이스키
