Update 06.자동 설문조사 프로그램.md

--- a/06.자동 설문조사 프로그램.md
+++ b/06.자동 설문조사 프로그램.md
@@ -1,4 +1,4 @@
-# pyautogui
+# 자동 설문조사 프로그램
 ## pyautogui 설치하기
 * 키보드와 마우스를 제어할 수 있는 모듈입니다.
 * ```pip install pyautogui```로 설치합니다. 
@@ -65,3 +65,5 @@ pyautogui.moveTo(500, 400, duration=1) #정한 좌표로 움직이기
 * pyautogui는 한글 입력이 안 됩니다. 이럴 때는 pyperclip 모듈을 사용합니다.
 * ```pyperclip.copy("한글")```로 복사합니다.
 * ```pyautogui.hotkey("ctrl", "v")```로 붙여넣습니다.
+
+## 
