--- a/06.설문지 자동 응답 프로그램.md
+++ b/06.설문지 자동 응답 프로그램.md
@@ -1,4 +1,4 @@
-# 자동 설문조사 프로그램
+# pyautogui
 ## pyautogui 설치하기
 * 키보드와 마우스를 제어할 수 있는 모듈입니다.
 * ```pip install pyautogui```로 설치합니다. 
@@ -66,4 +66,29 @@ pyautogui.moveTo(500, 400, duration=1) #정한 좌표로 움직이기
 * ```pyperclip.copy("한글")```로 복사합니다.
 * ```pyautogui.hotkey("ctrl", "v")```로 붙여넣습니다.
 
-## 
+## 자동 클릭 프로그램 만들기
+* 계속 클릭해주는 프로그램을 만들 수 있습니다.
+* https://popcat.click/
+
+# 설문지 자동 응답 프로그램 만들기
+## 구글 아이디로 설문지 만들기
+* 구글 아이디로 설문지를 만듭니다.
+* 좋아하는 과일, 좋아하는 과목을 답하는 설문지를 만듭니다.
+* 설문지를 보내기를 하면 주소가 나옵니다. 
+* 이 주소로 들어가면 설문조사를 할 수 있습니다.
+
+## 단축키를 사용해서 코딩하기
+* chrome을 열 때는 실행창에 chrome을 입력합니다.
+```python
+from time import sleep
+import pyautogui
+
+pyautogui.hotkey('win', 'r') 
+pyautogui.typewrite("chrome", 0.2)
+pyautogui.press('enter')
+pyautogui.typewrite("설문지 경로", 0.2)
+pyautogui.press('enter')
+```
+* tab 키로 설문항목을 옮깁니다. 
+* 화살표키로 설문지를 선택합니다.
+   * 화살표키 누르는 횟수를 랜덤하게 정합니다.
