Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -1,1 +1,9 @@
-
+크롤링이란 사이트에 있는 정보를 코딩을 통해서 가져오는 기술을 말합니다.
+셀레니움(Selenium)이라는 프레임워크를 사용하겠습니다.
+셀레니움은 실제 브라우저를 코드를 통해서 조작하는 방식이기 때문에 우리가 직접 크롬과 같은 인터넷 브라우저를 활용하는 것과 같은 방식으로 동작합니다.
+우리가 브라우저를 통해 볼 수 있는 정보는 셀레니움을 통해서 크롤링할 수 있습니다.
+셀레니움은 크롤링뿐만 아니라 인터넷 브라우저를 통해서 할 수 있는 것을 자동화할 수 있습니다.
+구글에서 이미지를 크롤링하는 것을 알아보겠습니다.
+파이썬 가상 환경을 세팅합니다.
+셀레니움을 설치하고 브라우저를 세팅합니다.
+구글 이미지 크롤링 코드를 파이썬을 작성합니다.
