Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -1,1 +1,16 @@
+* PyPDF2는 파이썬으로 PDF를 다룰 수 있게 해주는 라이브러리입니다.
+* pip로 설치할 때 대소문자를 잘 확인합니다.
+```pip install PyPDF2```
 
+* PyPDF2 공식문서에 자세한 사용방법이 나와 있습니다.
+  * https://pypdf2.readthedocs.io
+  * 나중에 라이브러리가 업데이트되면 사용방법이 바뀔 수 있으니 에러가 나면 공식문서를 확인하기 바랍니다.
+
+* PyPDF2는 클래스는 크게 3가지가 있습니다.
+  * PdfReader : PDF 읽기
+  * PdfWriter : 페이지 단위로 PDF 쓰기
+    * 회전, 분리 등의 작업을 페이지 단위로 합니다.
+  * PdfMerger : 파일 단위로 PDF 쓰기
+    * 여러 pdf 파일을 하나의 pdf로 합칠 때 사용합니다.
+   
+   
