Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -1,3 +1,6 @@
+# 주요 활동
+pdf 예시 파일을 만든다.
+
 * PyPDF2는 파이썬으로 PDF를 다룰 수 있게 해주는 라이브러리입니다.
 * pip로 설치할 때 대소문자를 잘 확인합니다.   
 ```pip install PyPDF2```
@@ -12,5 +15,43 @@
     * 회전, 분리 등의 작업을 페이지 단위로 합니다.
   * PdfMerger : 파일 단위로 PDF 쓰기
     * 여러 pdf 파일을 하나의 pdf로 합칠 때 사용합니다.
-   
-   
+
+## 원하는 페이지만 가져오기
+ ```python
+# 관련된 모듈을 가져옵니다. 
+from PyPDF2 import PdfFileReader, PdfFileWriter
+
+# step2.기존 pdf 불러오기
+pdfReader = PdfReader("테스트 PDF 파일 1.pdf", "rb")
+
+# step3.새로 만들 pdf 객체 생성
+pdfWriter = PdfWriter()
+
+# step4.기존의 1번 페이지를 가져와서 새로만든 pdf에 붙여넣기
+pdfWriter.add_page(pdfReader.pages[1])
+
+# step5.1번 페이지가 붙여진 새로운 pdf 파일을 현재 경로('./')에 원하는 이름으로 저장
+pdfWriter.write(open("./추출한 테스트 PDF 파일.pdf", "wb"))
+```
+
+## 페이지 나누기
+
+## PDF 회전하기
+
+## PDF 합치기
+
+## PDF에서 내용을 읽어서 메모장으로 정리하기
+```python
+from PyPDF2 import PdfReader
+reader = PdfReader(PDF_FILE_PATH)
+pages = reader.pages
+text = ""
+for page in pages:
+    sub = page.extract_text()
+    text += sub
+print(text)
+```
+
+## 여러 PDF를 처리하기
+여러 pdf를 다운로드 받아서 메모장으로 만들기
+
