Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -1,5 +1,6 @@
 # 주요 활동
-pdf 예시 파일을 만든다.
+* pdf 예시 파일을 만든다.
+
 
 * PyPDF2는 파이썬으로 PDF를 다룰 수 있게 해주는 라이브러리입니다.
 * pip로 설치할 때 대소문자를 잘 확인합니다.   
@@ -52,6 +53,9 @@ for page in pages:
 print(text)
 ```
 
+## pdf를 워드로 바꾸기
+
+## pdf를 이미지로 바꾸기
+
 ## 여러 PDF를 처리하기
 여러 pdf를 다운로드 받아서 메모장으로 만들기
-
