--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -10,6 +10,8 @@
   * https://pypdf2.readthedocs.io
   * 나중에 라이브러리가 업데이트되면 사용방법이 바뀔 수 있으니 에러가 나면 공식문서를 확인하기 바랍니다.
 
+* 버전을 정해서 설치할 수 있습니다.
+
 * PyPDF2는 클래스는 크게 3가지가 있습니다.
   * PdfReader : PDF 읽기
   * PdfWriter : 페이지 단위로 PDF 쓰기
