Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -59,5 +59,13 @@ print(text)
 
 ## pdf를 이미지로 바꾸기
 
+
+
+
 ## 여러 PDF를 처리하기
 여러 pdf를 다운로드 받아서 메모장으로 만들기
+
+
+## 대량으로 암호화 하기
+* pikepdf는 복호화할 때 사용합니다.
+* 
