Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -1,7 +1,15 @@
-# 주요 활동
-* pdf 예시 파일을 만든다.
+## pdf 파일 준비하기
+* 인터넷에서 PDF파일을 다운로드 받습니다.
+* 대한민국 정책브리핑 사이트 등에서 PDF를 파일을 다운로드 받습니다.
+ * www.korea.kr
+* 정책자료 > 전문자료를 클릭하면 다양한 PDF파일을 확인할 수 있습니다.
+* 다운로드 PDF파일에서 글씨를 드래그할 수 있는지 확인합니다.
+ * 사진으로 PDF파일을 만든 경우 파이썬으로 글씨를 읽을 수 없습니다.
+* '2024년 2월 소비자물가동향', '2023년 표준특허 전략맵'의 PDF 파일 등을 사용합니다.  
+* C드라이브에 'pdf' 폴더를 만들어서 다운로드 받은 PDF파일을 옮깁니다.
+* 파일 이름을 '1.pdf'와 같이 숫자로 정리합니다.
 
-
+## PyPDF2
 * PyPDF2는 파이썬으로 PDF를 다룰 수 있게 해주는 라이브러리입니다.
 * pip로 설치할 때 대소문자를 잘 확인합니다.   
 ```pip install PyPDF2```
@@ -10,14 +18,28 @@
   * https://pypdf2.readthedocs.io
   * 나중에 라이브러리가 업데이트되면 사용방법이 바뀔 수 있으니 에러가 나면 공식문서를 확인하기 바랍니다.
 
-* 버전을 정해서 설치할 수 있습니다.
-
 * PyPDF2는 클래스는 크게 3가지가 있습니다.
   * PdfReader : PDF 읽기
   * PdfWriter : 페이지 단위로 PDF 쓰기
     * 회전, 분리 등의 작업을 페이지 단위로 합니다.
   * PdfMerger : 파일 단위로 PDF 쓰기
-    * 여러 pdf 파일을 하나의 pdf로 합칠 때 사용합니다.
+    * 여러 PDF 파일을 하나의 PDF로 합칠 때 사용합니다.
+
+
+## PDF 파일을 읽고 텍스트 저장하기
+* PyPDF2 라이브러리가 잘 설치되었는지 확인합니다.
+ * 버전을 확인합니다.
+```python
+import PyPDF2
+print(PyPDF2.__version__)
+``` 
+
+* os 모듈을 사용해서 작업 폴더 경로를 'C:\pdf'로 바꿉니다.
+* PdfReader를 사용해서 PDF파일을 읽고 텍스트를 확인합니다.
+* 파일 경로는 문자열로 나타냅니다.
+```python
+
+```
 
 ## 원하는 페이지만 가져오기
  ```python
