Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -38,8 +38,20 @@ print(PyPDF2.__version__)
 * PdfReader를 사용해서 PDF파일을 읽고 텍스트를 확인합니다.
 * 파일 경로는 문자열로 나타냅니다.
 ```python
+from PyPDF2 import PdfReader
+import os
 
+os.chdir(r'C:\pdf')
+reader = PdfReader('1.pdf')
+pages = reader.pages #페이지를 가져옵니다.
+print(len(pages)) #페이지 수를 확인합니다.
 ```
+
+* 페이지에서
+
+## OS 모듈에서 PDF파일을 가져오기
+
+## PDF를 워드로 바꾸기
 
 ## 원하는 페이지만 가져오기
  ```python
@@ -65,24 +77,7 @@ pdfWriter.write(open("./추출한 테스트 PDF 파일.pdf", "wb"))
 
 ## PDF 합치기
 
-## PDF에서 내용을 읽어서 메모장으로 정리하기
-```python
-from PyPDF2 import PdfReader
-reader = PdfReader(PDF_FILE_PATH)
-pages = reader.pages
-text = ""
-for page in pages:
-    sub = page.extract_text()
-    text += sub
-print(text)
-```
-
-## pdf를 워드로 바꾸기
-
 ## pdf를 이미지로 바꾸기
-
-
-
 
 ## 여러 PDF를 처리하기
 여러 pdf를 다운로드 받아서 메모장으로 만들기
@@ -91,3 +86,5 @@ print(text)
 ## 대량으로 암호화 하기
 * pikepdf는 복호화할 때 사용합니다.
 * 
+
+## 사진으로 PDF파일 만들기
