Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -1,11 +1,11 @@
-## pdf 파일 준비하기
+## PDF파일 준비하기
 * 인터넷에서 PDF파일을 다운로드 받습니다.
 * 대한민국 정책브리핑 사이트 등에서 PDF를 파일을 다운로드 받습니다.
  * www.korea.kr
 * 정책자료 > 전문자료를 클릭하면 다양한 PDF파일을 확인할 수 있습니다.
 * 다운로드 PDF파일에서 글씨를 드래그할 수 있는지 확인합니다.
  * 사진으로 PDF파일을 만든 경우 파이썬으로 글씨를 읽을 수 없습니다.
-* '2024년 2월 소비자물가동향', '2023년 표준특허 전략맵'의 PDF 파일 등을 사용합니다.  
+* '2024년 2월 소비자물가동향', '2023년 표준특허 전략맵'의 PDF 파일 등을 사용합니다.
 * C드라이브에 'pdf' 폴더를 만들어서 다운로드 받은 PDF파일을 옮깁니다.
 * 파일 이름을 '1.pdf'와 같이 숫자로 정리합니다.
 
@@ -26,7 +26,7 @@
     * 여러 PDF 파일을 하나의 PDF로 합칠 때 사용합니다.
 
 
-## PDF 파일을 읽고 텍스트 저장하기
+## PDF파일을 읽고 텍스트 저장하기
 * PyPDF2 라이브러리가 잘 설치되었는지 확인합니다.
  * 버전을 확인합니다.
 ```python
@@ -43,11 +43,65 @@ import os
 
 os.chdir(r'C:\pdf')
 reader = PdfReader('1.pdf')
-pages = reader.pages #페이지를 가져옵니다.
-print(len(pages)) #페이지 수를 확인합니다.
+pages = reader.pages # 페이지를 가져옵니다.
+print(len(pages)) # 페이지 수를 확인합니다.
 ```
 
-* 페이지에서
+* extract_text()로 텍스트를 추출합니다.
+```python
+from PyPDF2 import PdfReader
+import os
+
+os.chdir(r'C:\pdf')
+reader = PdfReader('1.pdf')
+pages = reader.pages # 페이지를 가져옵니다.
+print(pages[0].extract_text())
+```
+
+* 전체 페이지에서 텍스트를 추출해서 TXT파일로 저장합니다.
+* 인코딩을 'utf-8'로 정합니다. 그렇지 않으면 에러가 납니다.   
+```python
+from PyPDF2 import PdfReader
+import os
+
+os.chdir(r'C:\pdf')
+reader = PdfReader('1.pdf')
+pages = reader.pages # 페이지를 가져옵니다.
+text = ""
+for page in pages:
+    sub = page.extract_text()
+    text += sub
+
+with open("pdf.txt", "w", encoding='utf-8') as f:
+    f.write(text)
+```
+
+* pdfminer 라이브러리를 사용하는 방법도 있습니다.
+ * https://github.com/pdfminer/pdfminer.six 
+* pdfminer 라이브러리를 설치합니다.   
+```pip install pdfminer.six```
+* PyPDF2와 달리 pdfminer 라이브러리는 모든 페이지를 자동으로 처리해서 한 번에 텍스트를 추출합니다.
+* pdfminer.high_level에서 extract_text 함수를 가져옵니다.
+* PDF파일의 경로를 넣어서 텍스트를 추출합니다.
+```python
+from pdfminer.high_level import extract_text
+import os
+
+os.chdir(r'C:\pdf')
+text = extract_text('1.pdf')
+print(text)
+```
+
+* 같은 방법으로 TXT파일로 저장합니다.
+```python
+from pdfminer.high_level import extract_text
+import os
+
+os.chdir(r'C:\pdf')
+text = extract_text('1.pdf')
+with open("pdf_pdfminer.txt", "w", encoding='utf-8') as f:
+    f.write(text)
+```
 
 ## OS 모듈에서 PDF파일을 가져오기
 
