Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -26,7 +26,7 @@
     * 여러 PDF 파일을 하나의 PDF로 합칠 때 사용합니다.
 
 
-## PDF파일을 읽고 텍스트 저장하기
+## PDF파일을 읽고 TXT파일로 저장하기
 * PyPDF2 라이브러리가 잘 설치되었는지 확인합니다.
  * 버전을 확인합니다.
 ```python
@@ -102,10 +102,9 @@ text = extract_text('1.pdf')
 with open("pdf_pdfminer.txt", "w", encoding='utf-8') as f:
     f.write(text)
 ```
+## 폴더에 있는 PDF를 모두 TXT파일로 바꾸기
 
-## OS 모듈에서 PDF파일을 가져오기
 
-## PDF를 워드로 바꾸기
 
 ## 원하는 페이지만 가져오기
  ```python
