--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -72,7 +72,7 @@ for page in pages:
     sub = page.extract_text()
     text += sub
 
-with open("pdf.txt", "w", encoding='utf-8') as f:
+with open('pdf.txt', 'w', encoding='utf-8') as f:
     f.write(text)
 ```
 
@@ -99,12 +99,73 @@ import os
 
 os.chdir(r'C:\pdf')
 text = extract_text('1.pdf')
-with open("pdf_pdfminer.txt", "w", encoding='utf-8') as f:
+with open('pdf_pdfminer.txt', 'w', encoding='utf-8') as f:
     f.write(text)
 ```
 ## 폴더에 있는 PDF를 모두 TXT파일로 바꾸기
+* os 모듈을 사용하면 폴더 안에 들어있는 폴더와 파일을 확인할 수 있습니다.
+```python
+import os
 
+os.chdir(r'C:\pdf')
+print(os.listdir())
+```
 
+* 파일 중에 '.pdf'로 끝나는 것을 확인해서 리스트에 저장합니다.
+* endswith로 파일명이 'pdf'로 끝나는지 확인합니다.
+```python
+import os
+
+os.chdir(r'C:\pdf')
+
+pdf_list = []
+folder_list = os.listdir()
+
+for file in folder_list:
+    if file.endswith('.pdf'):
+        pdf_list.append(file)
+
+print(pdf_list)
+```
+
+* PDF파일에서 파일이름을 확인합니다.
+* split으로 문자열을 나눠서 파일이름을 확인합니다.
+ * 이 이름으로 TXT파일로 저장합니다.
+```python
+import os
+
+os.chdir(r'C:\pdf')
+
+pdf_list = []
+folder_list = os.listdir()
+
+for file in folder_list:
+    if file.endswith('.pdf'):
+        pdf_list.append(file)
+
+for pdf in pdf_list:
+    print(pdf.split('.')[0])
+```
+
+* TXT파일로 저장합니다.
+```python
+from pdfminer.high_level import extract_text
+import os
+
+os.chdir(r'C:\pdf')
+
+pdf_list = []
+folder_list = os.listdir()
+for file in folder_list:
+    if file.endswith('.pdf'):
+        pdf_list.append(file)
+
+for pdf in pdf_list:
+    name = pdf.split('.')[0]
+    text = extract_text('{0}.pdf'.format(name))
+    with open('{0}.txt'.format(name), 'w', encoding='utf-8') as f:
+        f.write(text)
+```
 
 ## 원하는 페이지만 가져오기
  ```python
