Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -25,7 +25,6 @@
   * PdfMerger : 파일 단위로 PDF 쓰기
     * 여러 PDF 파일을 하나의 PDF로 합칠 때 사용합니다.
 
-
 ## PDF파일을 읽고 TXT파일로 저장하기
 * PyPDF2 라이브러리가 잘 설치되었는지 확인합니다.
  * 버전을 확인합니다.
@@ -168,21 +167,25 @@ for pdf in pdf_list:
 ```
 
 ## 원하는 페이지만 가져오기
- ```python
-# 관련된 모듈을 가져옵니다. 
-from PyPDF2 import PdfFileReader, PdfFileWriter
+* PdfWriter 객체를 만들어서 원하는 페이지를 추가해서 새로운 PDF를 만들 수 있습니다.
+```python
+from PyPDF2 import PdfReader, PdfWriter
+import os
 
-# step2.기존 pdf 불러오기
-pdfReader = PdfReader("테스트 PDF 파일 1.pdf", "rb")
+os.chdir(r'C:\pdf')
 
-# step3.새로 만들 pdf 객체 생성
+# 파일을 읽습니다.
+pdfReader = PdfReader('1.pdf', 'rb')
+
+# PdfWriter를 만듭니다.
 pdfWriter = PdfWriter()
 
-# step4.기존의 1번 페이지를 가져와서 새로만든 pdf에 붙여넣기
+# add_page로 페이지를 추가합니다. 
 pdfWriter.add_page(pdfReader.pages[1])
+pdfWriter.add_page(pdfReader.pages[3])
 
-# step5.1번 페이지가 붙여진 새로운 pdf 파일을 현재 경로('./')에 원하는 이름으로 저장
-pdfWriter.write(open("./추출한 테스트 PDF 파일.pdf", "wb"))
+# pdfWriter.write로 저장합니다.
+pdfWriter.write(open('1_new.pdf', "wb"))
 ```
 
 ## 페이지 나누기
