--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -188,7 +188,12 @@ pdfWriter.add_page(pdfReader.pages[3])
 pdfWriter.write(open('1_new.pdf', "wb"))
 ```
 
-## 페이지 나누기
+## PDF 페이지 나누기
+* PDF파일을 읽고 한 장씩을 자동으로 나눌 수 있습니다.
+* enumerate를 사용하면 원소와 인덱스를 한 번에 확인할 수 있습니다.
+```python
+
+``
 
 ## PDF 회전하기
 
