Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -1,3 +1,4 @@
+# 파이썬 PDF
 ## PDF파일 준비하기
 * 인터넷에서 PDF파일을 다운로드 받습니다.
 * 대한민국 정책브리핑 사이트 등에서 PDF를 파일을 다운로드 받습니다.
@@ -52,8 +53,8 @@ from PyPDF2 import PdfReader
 import os
 
 os.chdir(r'C:\pdf')
-reader = PdfReader('1.pdf')
-pages = reader.pages # 페이지를 가져옵니다.
+pdfReader = PdfReader('1.pdf')
+pages = pdfReader.pages # 페이지를 가져옵니다.
 print(pages[0].extract_text())
 ```
 
@@ -64,8 +65,8 @@ from PyPDF2 import PdfReader
 import os
 
 os.chdir(r'C:\pdf')
-reader = PdfReader('1.pdf')
-pages = reader.pages # 페이지를 가져옵니다.
+pdfReader = PdfReader('1.pdf')
+pages = pdfReader.pages # 페이지를 가져옵니다.
 text = ""
 for page in pages:
     sub = page.extract_text()
@@ -175,7 +176,7 @@ import os
 os.chdir(r'C:\pdf')
 
 # 파일을 읽습니다.
-pdfReader = PdfReader('1.pdf', 'rb')
+pdfReader = PdfReader('1.pdf')
 
 # PdfWriter를 만듭니다.
 pdfWriter = PdfWriter()
@@ -185,28 +186,53 @@ pdfWriter.add_page(pdfReader.pages[1])
 pdfWriter.add_page(pdfReader.pages[3])
 
 # pdfWriter.write로 저장합니다.
-pdfWriter.write(open('1_new.pdf', "wb"))
+pdfWriter.write(open('1_new.pdf', 'wb'))
 ```
 
 ## PDF 페이지 나누기
 * PDF파일을 읽고 한 장씩을 자동으로 나눌 수 있습니다.
 * enumerate를 사용하면 원소와 인덱스를 한 번에 확인할 수 있습니다.
 ```python
-
+my_list = ['a','b','c','d','e']
+for i, item in enumerate(my_list):
+    print(i, item)
 ``
 
-## PDF 회전하기
+* pdfWriter로 PDF 페이지를 한 장씩 저장합니다.
+```python
+from PyPDF2 import PdfReader, PdfWriter
+import os
 
-## PDF 합치기
+os.chdir(r'C:\pdf')
 
-## pdf를 이미지로 바꾸기
+pdfReader = PdfReader('1.pdf')
 
-## 여러 PDF를 처리하기
-여러 pdf를 다운로드 받아서 메모장으로 만들기
+pages = pdfReader.pages
 
+for i, page in enumerate(pages):
+    pdfWriter = PdfWriter()
+    pdfWriter.add_page(page)
+    pdfWriter.write(open('1_{0}.pdf'.format(i), 'wb'))
+```
 
-## 대량으로 암호화 하기
-* pikepdf는 복호화할 때 사용합니다.
-* 
+## PDF를 합치기
+* PdfMerger를 사용해서 PDF 여러 개를 합칠 수 있습니다.
+```python
+from PyPDF2 import PdfMerger 
+import os
 
-## 사진으로 PDF파일 만들기
+os.chdir(r'C:\pdf')
+
+pdf_list = ['1.pdf', '2.pdf']
+
+merger = PdfMerger()
+
+for pdf in pdf_list:
+    merger.append(pdf)
+
+merger.write("all.pdf")
+merger.close()
+```
+
+# 폴더에 있는 모든 PDF를 합치기
+* os 모듈을 사용해서 프로그램을 만들어 보세요.
