--- a/08.엑셀 자동화.md
+++ b/08.엑셀 자동화.md
@@ -1,1 +1,9 @@
-
+* OpenPyxl 라이브러리로 엑셀 자동화를 해보겠습니다. 
+* https://wikidocs.net/135795  
+* 엑셀의 구성요소인 Workbook, Sheet, Cell, Range를  잘 이해해야 합니다.
+* 엑셀에는 Workbook이라는 오브젝트가 있습니다.
+* xlsx와 같은 엑셀 파일을 Workbook 오브젝트라고 합니다.  
+* 파이썬 openpyxl에서는 엑셀 파일을 생성하거나 특정 엑셀 파일에 접근할 때, Workbook 객체를 생성하는 과정을 걷처야 합니다. 
+* 메모장에서 사원이름과 나이를 읽어서 엑셀로 정리합니다.
+* 엑셀을 많이 사용해보신 분이라면 알겠지만 엑셀 파일 1개에는 여러가지 Sheet가 존재합니다.
+* 데이터를 입력할 수 있는 Cell이 모여진 공간을 엑셀에서는 Sheet라고 부르며, 1개의 Workbook 안에는 여러개의 Sheet를 가질 수 있습니다. 여러개의 Sheet가 있을 수 있기 때문에, openpyxl 모듈에는 특정 Sheet에 접근하기 위해 이를 설정하는 코드를 작성해야 합니다.
