--- a/08.엑셀 자동화.md
+++ b/08.엑셀 자동화.md
@@ -4,6 +4,47 @@
 * 엑셀에는 Workbook이라는 오브젝트가 있습니다.
 * xlsx와 같은 엑셀 파일을 Workbook 오브젝트라고 합니다.  
 * 파이썬 openpyxl에서는 엑셀 파일을 생성하거나 특정 엑셀 파일에 접근할 때, Workbook 객체를 생성하는 과정을 걷처야 합니다. 
-* 메모장에서 사원이름과 나이를 읽어서 엑셀로 정리합니다.
 * 엑셀을 많이 사용해보신 분이라면 알겠지만 엑셀 파일 1개에는 여러가지 Sheet가 존재합니다.
-* 데이터를 입력할 수 있는 Cell이 모여진 공간을 엑셀에서는 Sheet라고 부르며, 1개의 Workbook 안에는 여러개의 Sheet를 가질 수 있습니다. 여러개의 Sheet가 있을 수 있기 때문에, openpyxl 모듈에는 특정 Sheet에 접근하기 위해 이를 설정하는 코드를 작성해야 합니다.
+* 데이터를 입력할 수 있는 것이 Cell입니다. 그리고 Cell이 모여진 공간을 Sheet이라고 합니다.
+* 1개의 Workbook이 여러 개의 Sheet를 가질 수 있습니다.
+* 엑셀 Sheet에서 데이터를 쓸 수 있는 1칸을 Cell이라고 합니다. 엑셀에서는 특정 위치의 데이터를 읽어오거나 쓰고 싶을 때, 그 Cell의 행과 열을 통해서 접근할 수 있습니다.
+* Row는 행이고 Column은 열입니다.
+* 엑셀에서는 각 Cell을 나타내는 인덱스가 있습니다. 1행 1열의 위치는 'A1'로 1행 2열의 위치는 'B1'와 같이 나타낼 수 있습니다. Range를 사용하면 인덱스로 각 셀에 접근할 수 있습니다. 
+* 메모장에서 사원이름과 나이를 읽어서 엑셀로 정리합니다.
+* 엑셀에 있는 경로를 정리해서 youtube를 다운로드 받아 보겠습니다.
+
+* openpyxl을 설치합니다. 
+```
+pip install openpyxl
+```
+
+* 잘 설치되었는지 확인합니다.
+```
+import openpyxl as op
+print(op.__version__)
+```
+
+* Workbook 객체를 만듭니다.
+```python
+import  openpyxl  as  op  #openpyxl 모듈 import
+
+wb = op.Workbook() #새로운 Workbook 객체 생성
+
+print(wb)
+```
+* save로 Workbook 객체를 저장합니다.
+* 상대경로나 절대경로를 입력합니다.
+```python
+wb.save('excel.xlsx')
+```
+
+* load_workbook로 파일을 읽어서 Workbook 객체를 만들 수 있습니다.
+```python
+wb = op.load_workbook(path + "/test.xlsx")
+```
+
+*  객체가 제대로 생성되었는지 확인하기 위해 print 함수를 통해 wb를 다시 출력해보겠습니다.
+
+* Workbook 객체를 만들었다면 
+
+
