--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -234,5 +234,24 @@ merger.write("all.pdf")
 merger.close()
 ```
 
+## PDF를 사진을 바꾸기
+* PyMuPDF 라이브러리를 사용합니다.
+```
+pip install PyMuPDF
+```
+
+* PyMuPDF의 fitz를 사용합니다.
+```python
+import fitz
+import os
+
+os.chdir(r'C:\pdf')
+
+doc = fitz.open('1.pdf')
+for i, page in enumerate(doc):
+    img = page.get_pixmap()
+    img.save(f'{i}.png')
+```
+
 # 폴더에 있는 모든 PDF를 합치기
 * os 모듈을 사용해서 프로그램을 만들어 보세요.
