--- a/08.엑셀 자동화.md
+++ b/08.엑셀 자동화.md
@@ -1,4 +1,15 @@
-* OpenPyxl 라이브러리로 엑셀 자동화를 해보겠습니다. 
+* OpenPyxl 라이브러리로 엑셀 자동화를 해보겠습니다.
+* openpyxl을 설치합니다. 
+```
+pip install openpyxl
+```
+
+* 잘 설치되었는지 확인합니다.
+```
+import openpyxl
+print(openpyxl.__version__)
+```
+
 * https://wikidocs.net/135795  
 * 엑셀의 구성요소인 Workbook, Sheet, Cell, Range를  잘 이해해야 합니다.
 * 엑셀에는 Workbook이라는 오브젝트가 있습니다.
@@ -13,38 +24,67 @@
 * 메모장에서 사원이름과 나이를 읽어서 엑셀로 정리합니다.
 * 엑셀에 있는 경로를 정리해서 youtube를 다운로드 받아 보겠습니다.
 
-* openpyxl을 설치합니다. 
-```
-pip install openpyxl
-```
-
-* 잘 설치되었는지 확인합니다.
-```
-import openpyxl as op
-print(op.__version__)
-```
-
 * Workbook 객체를 만듭니다.
-```python
-import  openpyxl  as  op  #openpyxl 모듈 import
-
-wb = op.Workbook() #새로운 Workbook 객체 생성
-
-print(wb)
-```
 * save로 Workbook 객체를 저장합니다.
-* 상대경로나 절대경로를 입력합니다.
+  * 상대경로나 절대경로를 입력합니다.
+*  
 ```python
+from  openpyxl  import Workbook
+import os
+
+os.chdir(r'C:\excel')
+
+wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+ws = wb.active # 현재 활성된 Sheet를 가져옵니다.
+ws.title = 'MySheet' #Sheet의 이름을 바꿉니다.
 wb.save('excel.xlsx')
+wb.close()
 ```
 
-* load_workbook로 파일을 읽어서 Workbook 객체를 만들 수 있습니다.
+* Sheet를 추가할 수 있습니다.
+* create_sheet로 Sheet를 만듭니다.
+* sheet_properties.tabColor로 탭 색깔을 정할 수 있습니다.
 ```python
-wb = op.load_workbook(path + "/test.xlsx")
+from  openpyxl  import Workbook
+import os
+
+os.chdir(r'C:\excel')
+
+wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+ws = wb.create_sheet('NewSheet')
+ws.sheet_properties.tabColor = "ff0000"
+wb.save('excel.xlsx')
+wb.close()
 ```
 
-*  객체가 제대로 생성되었는지 확인하기 위해 print 함수를 통해 wb를 다시 출력해보겠습니다.
+* Sheet를 추가할 때 인덱스를 정할 수 있습니다.
+```python
+from  openpyxl  import Workbook
+import os
 
-* Workbook 객체를 만들었다면 
+os.chdir(r'C:\excel')
 
+wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+ws1 = wb.create_sheet('Sheet1')
+ws2 = wb.create_sheet('Sheet3')
+ws3 = wb.create_sheet('NewSheet', 1)
+wb.save('excel.xlsx')
+wb.close()
+```
+
+* sheetnames로 엑셀에 어떤 Sheet가 있는지 리스트로 확인할 수 있습니다.
+```python
+from  openpyxl  import Workbook
+import os
+
+os.chdir(r'C:\excel')
+
+wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+ws1 = wb.create_sheet('Sheet1')
+ws2 = wb.create_sheet('Sheet3')
+ws3 = wb.create_sheet('NewSheet', 1)
+wb.save('excel.xlsx')
+wb.close()
+print(wb.sheetnames)
+```
 
