--- a/08.엑셀 자동화.md
+++ b/08.엑셀 자동화.md
@@ -1,4 +1,6 @@
-* OpenPyxl 라이브러리로 엑셀 자동화를 해보겠습니다.
+# 파이썬으로 엑셀 코딩하기
+## openpyxl 설치하기
+* openpyxl 라이브러리를 사용해서 엑셀 파일을 다뤄보겠습니다.
 * openpyxl을 설치합니다. 
 ```
 pip install openpyxl
@@ -10,12 +12,12 @@ import openpyxl
 print(openpyxl.__version__)
 ```
 
-* https://wikidocs.net/135795  
-* 엑셀의 구성요소인 Workbook, Sheet, Cell, Range를  잘 이해해야 합니다.
-* 엑셀에는 Workbook이라는 오브젝트가 있습니다.
-* xlsx와 같은 엑셀 파일을 Workbook 오브젝트라고 합니다.  
+## Workbook, Sheet, Cell, Range 개념 알기
+* 엑셀의 구성요소인 Workbook, Sheet, Cell, Range를 잘 이해해야 합니다.
+* 엑셀에는 Workbook이라는 오브젝트(개체)가 있습니다.
+* xlsx와 같은 엑셀 파일을 Workbook 오브젝트(개체)라고 합니다.  
 * 파이썬 openpyxl에서는 엑셀 파일을 생성하거나 특정 엑셀 파일에 접근할 때, Workbook 객체를 생성하는 과정을 걷처야 합니다. 
-* 엑셀을 많이 사용해보신 분이라면 알겠지만 엑셀 파일 1개에는 여러가지 Sheet가 존재합니다.
+* 엑셀 파일 1개에는 여러 개의 Sheet가 존재합니다.
 * 데이터를 입력할 수 있는 것이 Cell입니다. 그리고 Cell이 모여진 공간을 Sheet이라고 합니다.
 * 1개의 Workbook이 여러 개의 Sheet를 가질 수 있습니다.
 * 엑셀 Sheet에서 데이터를 쓸 수 있는 1칸을 Cell이라고 합니다. 엑셀에서는 특정 위치의 데이터를 읽어오거나 쓰고 싶을 때, 그 Cell의 행과 열을 통해서 접근할 수 있습니다.
@@ -24,12 +26,13 @@ print(openpyxl.__version__)
 * 메모장에서 사원이름과 나이를 읽어서 엑셀로 정리합니다.
 * 엑셀에 있는 경로를 정리해서 youtube를 다운로드 받아 보겠습니다.
 
+## 엑셀 파일 만들기
 * Workbook 객체를 만듭니다.
 * save로 Workbook 객체를 저장합니다.
   * 상대경로나 절대경로를 입력합니다.
-*  
+* VSCODE에서 C드라이브의 'excel' 폴더를 열어서 사용하면 os 모듈을 사용하지 않아도 됩니다.  
 ```python
-from  openpyxl  import Workbook
+from openpyxl import Workbook
 import os
 
 os.chdir(r'C:\excel')
@@ -38,53 +41,96 @@ wb = Workbook() # 새로운 Workbook 객체 생성합니다.
 ws = wb.active # 현재 활성된 Sheet를 가져옵니다.
 ws.title = 'MySheet' #Sheet의 이름을 바꿉니다.
 wb.save('excel.xlsx')
-wb.close()
 ```
 
 * Sheet를 추가할 수 있습니다.
 * create_sheet로 Sheet를 만듭니다.
 * sheet_properties.tabColor로 탭 색깔을 정할 수 있습니다.
 ```python
-from  openpyxl  import Workbook
-import os
-
-os.chdir(r'C:\excel')
+from openpyxl import Workbook
 
 wb = Workbook() # 새로운 Workbook 객체 생성합니다.
 ws = wb.create_sheet('NewSheet')
 ws.sheet_properties.tabColor = "ff0000"
 wb.save('excel.xlsx')
-wb.close()
 ```
 
 * Sheet를 추가할 때 인덱스를 정할 수 있습니다.
 ```python
-from  openpyxl  import Workbook
-import os
-
-os.chdir(r'C:\excel')
+from openpyxl import Workbook
 
 wb = Workbook() # 새로운 Workbook 객체 생성합니다.
 ws1 = wb.create_sheet('Sheet1')
 ws2 = wb.create_sheet('Sheet3')
 ws3 = wb.create_sheet('NewSheet', 1)
 wb.save('excel.xlsx')
-wb.close()
 ```
 
 * sheetnames로 엑셀에 어떤 Sheet가 있는지 리스트로 확인할 수 있습니다.
 ```python
-from  openpyxl  import Workbook
-import os
-
-os.chdir(r'C:\excel')
+from openpyxl import Workbook
 
 wb = Workbook() # 새로운 Workbook 객체 생성합니다.
 ws1 = wb.create_sheet('Sheet1')
 ws2 = wb.create_sheet('Sheet3')
 ws3 = wb.create_sheet('NewSheet', 1)
 wb.save('excel.xlsx')
-wb.close()
 print(wb.sheetnames)
 ```
+
+* Sheet에서 인덱스를 정해서 값을 입력할 수 있습니다.
+ * Sheet[인덱스] = 값
+* value로 셀의 값을 확인할 수 있습니다. 
+```python
+from openpyxl import Workbook
+
+wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+ws = wb.active
+ws['A1'] = 'A1'
+wb.save('excel.xlsx')
+print(ws['A1'].value)
+```
+
+* 행과 열을 정해서 값을 입력할 수 있습니다.
+* cell에 row와 column, value를 정합니다.
+```python
+from openpyxl import Workbook
+
+wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+ws = wb.active
+ws.cell(row=1, column=1, value='A1').value
+wb.save('excel.xlsx')
+
+print(ws.cell(row=1, column=1).value)
+```
+
+* random 모듈을 사용해서 셀에 랜덤하게 값을 입력해보겠습니다.
+* random.randint(최소, 최대)로 랜덤하게 값을 정합니다.
+```python
+from random import * 
+
+print(randint(0,100))
+```
+
+* 한 
+
+## 엑셀 파일 불러오기
+* load_workbook로 파일을 불러옵니다.
+* max_row와 max_column로 데이터가 들어있는 행과 열의 최댓값을 알 수 있습니다.
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+for x in range(1, ws.max_row):
+    for y in range(1, ws.max_column):
+        print(ws.cell(row=x, column=y).value, end=" ") # 뒤에 빈 칸이 추가됩니다.
+    print()
+```
+
+
+
+
+
 
