--- a/08.엑셀 자동화.md
+++ b/08.엑셀 자동화.md
@@ -49,7 +49,7 @@ wb.save('excel.xlsx')
 ```python
 from openpyxl import Workbook
 
-wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+wb = Workbook()
 ws = wb.create_sheet('NewSheet')
 ws.sheet_properties.tabColor = "ff0000"
 wb.save('excel.xlsx')
@@ -59,7 +59,7 @@ wb.save('excel.xlsx')
 ```python
 from openpyxl import Workbook
 
-wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+wb = Workbook()
 ws1 = wb.create_sheet('Sheet1')
 ws2 = wb.create_sheet('Sheet3')
 ws3 = wb.create_sheet('NewSheet', 1)
@@ -70,7 +70,7 @@ wb.save('excel.xlsx')
 ```python
 from openpyxl import Workbook
 
-wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+wb = Workbook()
 ws1 = wb.create_sheet('Sheet1')
 ws2 = wb.create_sheet('Sheet3')
 ws3 = wb.create_sheet('NewSheet', 1)
@@ -84,7 +84,7 @@ print(wb.sheetnames)
 ```python
 from openpyxl import Workbook
 
-wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+wb = Workbook() 
 ws = wb.active
 ws['A1'] = 'A1'
 wb.save('excel.xlsx')
@@ -96,7 +96,7 @@ print(ws['A1'].value)
 ```python
 from openpyxl import Workbook
 
-wb = Workbook() # 새로운 Workbook 객체 생성합니다.
+wb = Workbook() 
 ws = wb.active
 ws.cell(row=1, column=1, value='A1').value
 wb.save('excel.xlsx')
@@ -112,7 +112,18 @@ from random import *
 print(randint(0,100))
 ```
 
-* 한 
+* append로 한 행씩 추가할 수 있습니다.
+```python
+from openpyxl import Workbook
+
+wb = Workbook() 
+ws = wb.active
+ws.append(['번호', '국어', '영어', '수학'])
+wb.save('excel.xlsx')
+```
+
+* 번호는 1부터 10까지 순서대로 정하고 국어, 영어, 수학은 0부터 100까지 랜덤하게 정해보겠습니다.
+ 
 
 ## 엑셀 파일 불러오기
 * load_workbook로 파일을 불러옵니다.
@@ -125,12 +136,65 @@ ws = wb.active
 
 for x in range(1, ws.max_row):
     for y in range(1, ws.max_column):
-        print(ws.cell(row=x, column=y).value, end=" ") # 뒤에 빈 칸이 추가됩니다.
+        print(ws.cell(row=x, column=y).value, end=' ') # 뒤에 빈 칸이 추가됩니다.
     print()
 ```
 
+* 범위를 정해서 값을 읽을 수 있습니다.
+* 열 전체를 읽습니다.
+```python
+from openpyxl import load_workbook
 
+wb = load_workbook('excel.xlsx')
+ws = wb.active
 
+# 튜플로 데이터를 읽습니다.
+col_B = ws['B']
 
+for cell in col_B:
+    print(cell.value)
+```
 
+* 열의 범위를 정해서 읽을 수 있습니다.
+* 반복문을 2번 사용해야 합니다.
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+col_range = ws['A:C']
+
+for cols in col_range:
+    for cell in cols:
+        print(cell.value)
+```
+
+* 행 전체를 읽습니다.
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+row_1 = ws[1]
+
+for cell in row_1:
+    print(cell.value)
+```
+
+* 마찬가지로 행의 범위를 정해서 읽을 수 있습니다.
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+row_range = ws[1:3]
+
+for rows in row_range:
+    for cell in rows:
+        print(cell.value, end=' ')
+    print()
+```
 
