--- a/08.엑셀 자동화.md
+++ b/08.엑셀 자동화.md
@@ -23,8 +23,6 @@ print(openpyxl.__version__)
 * 엑셀 Sheet에서 데이터를 쓸 수 있는 1칸을 Cell이라고 합니다. 엑셀에서는 특정 위치의 데이터를 읽어오거나 쓰고 싶을 때, 그 Cell의 행과 열을 통해서 접근할 수 있습니다.
 * Row는 행이고 Column은 열입니다.
 * 엑셀에서는 각 Cell을 나타내는 인덱스가 있습니다. 1행 1열의 위치는 'A1'로 1행 2열의 위치는 'B1'와 같이 나타낼 수 있습니다. Range를 사용하면 인덱스로 각 셀에 접근할 수 있습니다. 
-* 메모장에서 사원이름과 나이를 읽어서 엑셀로 정리합니다.
-* 엑셀에 있는 경로를 정리해서 youtube를 다운로드 받아 보겠습니다.
 
 ## 엑셀 파일 만들기
 * Workbook 객체를 만듭니다.
@@ -123,7 +121,6 @@ wb.save('excel.xlsx')
 ```
 
 * 번호는 1부터 10까지 순서대로 정하고 국어, 영어, 수학은 0부터 100까지 랜덤하게 정해보겠습니다.
- 
 
 ## 엑셀 파일 불러오기
 * load_workbook로 파일을 불러옵니다.
@@ -198,3 +195,71 @@ for rows in row_range:
     print()
 ```
 
+* rows와 columns로 전체 행과 열의 데이터를 가져올 수 있습니다.
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+print(ws.rows)
+```
+
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+for row in ws.rows:
+    for item in row:
+        print(item.value, end=' ')
+    print()
+```
+
+* 값을 확인하고 조건을 사용해서 새로운 값을 넣을 수 있습니다.
+* 아래와 같이 E열에 값을 추가할 수 있습니다.
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+cols = ws['E']
+
+for i, col in enumerate(cols):
+    if i == 0:
+        col.value = '평가'
+    else:
+        col.value = 1
+
+wb.save('excel_new.xlsx')
+```
+
+* E열에 수학 점수가 80점이면 '통과', 그렇지 않으면 '재시험'이라고 입력해보겠습니다.
+```python
+from openpyxl import load_workbook
+
+wb = load_workbook('excel.xlsx')
+ws = wb.active
+
+cols_math = ws['D']
+cols = ws['E']
+
+for i, col in enumerate(cols):
+    if i == 0:
+        col.value = '평가'
+    else:
+        if cols_math[i].value >= 80:
+            col.value = '통과'
+        else:
+            col.value = '재시험'
+
+wb.save('excel_new.xlsx')
+```
+
+# TXT파일을 엑셀 파일로 바꾸기
+* 사원이름과 나이가 들어 있는 TXT 파일을 읽어서 엑셀로 정리합니다.
+* TXT 파일에서 사원이름과 나이는 ':'로 구분되어 있습니다.
+* 사원이름과 나이로 구분해서 저장합니다.
+* 파일 이름은 employee.xlsx로 정합니다.
