--- a/09.PPT 자동화로 명찰 만들기.md
+++ b/09.PPT 자동화로 명찰 만들기.md
@@ -1,1 +1,21 @@
+# PPT 자동화 기초
+## 레이아웃 만들기
+* C드라이브에 ppt 폴더를 만듭니다.
+* ppt 폴더에 'ppt.ppt'라는 PPT 파일을 만듭니다.
+* 보기 > 슬라이드 마스터를 순서대로 클릭합니다.
+* PPT의 슬라이드 마스터에서 형식을 추가합니다.
+  * 몇 번째 레이아웃인지 확인합니다.
+* 새 슬라이드에서 만들었던 레이아웃을 선택합니다.
+* 홈 > 선택 > 선택 창을 순서대로 클릭합니다.
+  * 개체의 이름을 확인할 수 있습니다.  
 
+## python-pptx 사용하기
+* 공식문서 사용방법을 확인합니다.
+  * https://python-pptx.readthedocs.io/en/latest/ 
+* python-pptx 라이브러리를 설치합니다.
+```python
+pip install python-pptx
+```
+
+* placeholders는 개체 틀입니다.
+* 개체 틀 이름을 확인해보겠습니다.
