Update 09.PPT 자동화로 명찰 만들기.md

--- a/09.PPT 자동화로 명찰 만들기.md
+++ b/09.PPT 자동화로 명찰 만들기.md
@@ -1,13 +1,16 @@
 # PPT 자동화 기초
 ## 레이아웃 만들기
 * C드라이브에 ppt 폴더를 만듭니다.
-* ppt 폴더에 'ppt.ppt'라는 PPT 파일을 만듭니다.
+* ppt 폴더에 'ppt.pptx'라는 PPT 파일을 만듭니다.
 * 보기 > 슬라이드 마스터를 순서대로 클릭합니다.
 * PPT의 슬라이드 마스터에서 형식을 추가합니다.
-  * 몇 번째 레이아웃인지 확인합니다.
-* 새 슬라이드에서 만들었던 레이아웃을 선택합니다.
+  * 개체 틀 삽입에서 개체를 추가합니다.    
 * 홈 > 선택 > 선택 창을 순서대로 클릭합니다.
-  * 개체의 이름을 확인할 수 있습니다.  
+  * 개체 이름을 확인할 수 있습니다.
+  * 개체 이름을 바꿀 수 있습니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/5aec3a90-7888-452d-a32c-ed7c453e1929)
+* 몇 번째 레이아웃인지 확인합니다.
+* 새 슬라이드에서 만들었던 레이아웃을 선택합니다.
 
 ## python-pptx 사용하기
 * 공식문서 사용방법을 확인합니다.
@@ -17,5 +20,42 @@
 pip install python-pptx
 ```
 
-* placeholders는 개체 틀입니다.
 * 개체 틀 이름을 확인해보겠습니다.
+```python
+from pptx import Presentation
+
+# Presentation 객체를 만듭니다.
+prs = Presentation('ppt.pptx')
+
+# 레이아웃을 선택합니다. 작은 것부터 인덱스를 정하면 됩니다. 
+add_slide_layout = prs.slide_layouts[0]
+# 슬라이드를 추가합니다.
+slide = prs.slides.add_slide(add_slide_layout)
+# 개체 틀 아이디와 이름을 확인합니다.
+shapes = slide.shapes
+
+for shape in shapes:
+    print(shape.placeholder_format.idx, shape.name)
+
+# ppt_new.pptx로 저장합니다.
+prs.save('ppt_new.pptx') 
+```
+
+* 개체의 값을 정합니다.
+* placeholders는 개체 틀입니다.
+```python
+from pptx import Presentation
+
+prs = Presentation('ppt.pptx')
+
+add_slide_layout = prs.slide_layouts[0]
+slide = prs.slides.add_slide(add_slide_layout)
+shapes = slide.shapes
+
+# placeholders[id]로 개체의 속성을 정합니다.
+slide.placeholders[10].text = '이름'
+slide.placeholders[11].text = '나이'
+
+prs.save('ppt_new.pptx')
+```
+
