Update 09.PPT 자동화로 명찰 만들기.md

--- a/09.PPT 자동화로 명찰 만들기.md
+++ b/09.PPT 자동화로 명찰 만들기.md
@@ -59,3 +59,35 @@ slide.placeholders[11].text = '나이'
 prs.save('ppt_new.pptx')
 ```
 
+## 사진 추가하기
+* 슬라이드 마스터에서 그림 객체를 추가합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/6c955043-0c5f-4fe4-b694-490210fb9750)
+* ppt 폴더에 인물 사진을 하나 다운로드 받습니다.
+* 다시 개체의 id를 확인합니다.
+* 그림 개체의 id를 확인합니다.
+```python
+from pptx import Presentation
+
+prs = Presentation('ppt.pptx')
+
+add_slide_layout = prs.slide_layouts[0]
+slide = prs.slides.add_slide(add_slide_layout)
+
+slide.placeholders[10].text = '이름'
+slide.placeholders[11].text = '나이'
+# 그림 개체를 정합니다.
+img = slide.placeholders[12]
+# insert_picture(경로)로 사진을 넣습니다.
+img.insert_picture('1.jpg')
+
+prs.save('ppt_new.pptx')
+```
+
+# 엑셀에서 데이터를 읽어서 자동화하기
+* 엑셀에서 데이터를 읽어서 PPT를 만들어 보세요.
+
+# 명찰 만들기
+* PPT로 명찰 레이아웃을 만들고 엑셀에서 데이터를 읽어서 명찰을 만들어 보세요.
+
+# 상장 만들기
+* PPT로 상장 레이아웃을 만들고 엑셀에서 데이터를 읽어서 상장을 만들어 보세요.
