--- a/10.이메일 자동화.md
+++ b/10.이메일 자동화.md
@@ -1,2 +1,72 @@
+# 네이버 이메일 자동화하기
+## 네이버 설정하기
 * 네이버와 구글 이메일 계정을 사용해서 이메일 자동화를 하겠습니다.
+* SMTP 발송 방식을 사용합니다.
+* 먼저 네이버 이메일 자동화 방법을 알아보겠습니다.
+* 네이버 계정으로 로그인합니다.
+* 메일을 선택합니다.
+* 왼쪽 메뉴에서 환경설정을 클릭합니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/f9bb1cb1-07b3-4b31-bf9a-843f7e9c6353)
+* POP3/SMTP 설정을 선택합니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/62d1568f-882f-4209-bde7-a1460e44448a)
+* IMAP/SMTP 설정을 선택합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/13ce6de5-c060-4e77-9e63-74a0643e55b8)
+* 사용함을 선택하고 저장을 합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/7e20a9fa-3445-4819-887b-bb0a8ce7f321)
+* SMTP 포트번호를 확인합니다.
+  * 587
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/acf65f0c-96a3-4a4f-9977-f83c6592d36d)
+* 로그인할 때 사용할 앱 비밀번호를 만듭니다.
+* 네이버 홈화면에서 네이버ID를 클릭합니다.
+* 왼쪽 메뉴에서 보안설정을 클릭합니다.
+* 2단계 인증을 합니다.
+* 2단계 인증에서 설정을 클릭합니다.
+* 다음을 클릭합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/5cb397df-13ec-413a-b978-d244d8637510)
+* 애플리케이션 비밀번호 설정하기를 클릭합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/732fd0a6-6b13-4a4d-9006-92bcb4524dc8)
+* 종류를 선택하고 생성하기를 클릭합니다. 그러면 비밀번호가 생성됩니다.
+  * QSF1GC1QCNDM
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/7d6fc816-64a7-42da-9be5-820266327aac)
+
+## 파이썬 코딩하기
+* C드라이브에 email 폴더를 만듭니다.
+* smtplib, email 라이브러리를 아나콘다를 설치할 때 기본적으로 설치됩니다.
+* 모듈을 가져옵니다.
+* STMP 서버와 접속을 합니다.
+* 만들었던 비밀번호로 로그인합니다.
+* 메시지를 만들어서 sendmail로 보냅니다.
+```python
+import smtplib
+from email.mime.text import MIMEText
+
+smtp = smtplib.SMTP('smtp.naver.com', 587)
+
+# 보안통신을 위해서 starttls 함수를 호출합니다.
+smtp.starttls()
+
+# 로그인합니다. 
+# 네이버 아이디와 생성했던 비밀번호를 입력합니다.
+smtp.login('jerrytoemail@naver.com', 'QSF1GC1QCNDM')
+
+# 본문 내용을 적습니다.
+msg = MIMEText('파이썬으로 이메일 자동화합니다.')
+# 제목을 정합니다.
+msg['Subject'] = '파이썬 이메일 자동화'
+# 보내는 사람을 정합니다.
+msg['From'] = 'jerrytoemail@naver.com'
+msg['To'] = 'test@gmail.com'
+
+# 메일을 보냅니다.
+smtp.sendmail(msg['From'], msg['To'], msg.as_string())
+smtp.quit()
+```
+
+## 엑셀 파일 사용하기
+* 엑셀에서 파일을 읽어서 사용합니다.
+* https://docs.google.com/spreadsheets/d/1fWghzXzcO_BBAbV4MPskZ05Ai4FIjPtUCnZocT67MRU/edit?usp=sharing
+* 'email.xlsx' 파일을 만듭니다.
+* openpyxl 라이브러리로 엑셀 파일을 읽습니다.
+* datetime 모듈로 날짜를 입력합니다.
+* 함수를 만들어서 코딩합니다.
 
