--- a/10.이메일 자동화.md
+++ b/10.이메일 자동화.md
@@ -1,8 +1,7 @@
 # 네이버 이메일 자동화하기
 ## 네이버 설정하기
-* 네이버와 구글 이메일 계정을 사용해서 이메일 자동화를 하겠습니다.
+* 네이버 이메일 자동화 방법을 알아보겠습니다.
 * SMTP 발송 방식을 사용합니다.
-* 먼저 네이버 이메일 자동화 방법을 알아보겠습니다.
 * 네이버 계정으로 로그인합니다.
 * 메일을 선택합니다.
 * 왼쪽 메뉴에서 환경설정을 클릭합니다.   
@@ -69,4 +68,117 @@ smtp.quit()
 * openpyxl 라이브러리로 엑셀 파일을 읽습니다.
 * datetime 모듈로 날짜를 입력합니다.
 * 함수를 만들어서 코딩합니다.
+* 엑셀에서 한 행씩 읽어서 데이터를 확인해보겠습니다.
+```python
+from openpyxl import load_workbook
 
+wb = load_workbook('email.xlsx')
+ws = wb.active
+
+for row in ws.rows:
+    print(row[0].row) # 행을 확인합니다.
+    print(row[0].value, row[1].value, row[2].value, row[3].value)
+```
+
+* 현재 시각을 확인합니다.
+```python
+import datetime
+
+# 현재 시각을 나타냅니다.
+dt = datetime.datetime.now()
+print(dt)
+# 우리가 많이 사용하는 형식으로 포매팅합니다.
+print(dt.strftime('%Y-%m-%d %H:%M:%S'))
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 엑셀 파일에서 데이터 읽어서 업무 자동화하기
+```python
+import smtplib
+from email.mime.text import MIMEText
+from openpyxl import load_workbook
+import datetime
+
+def email_send(data):
+    smtp = smtplib.SMTP('smtp.naver.com', 587)
+    smtp.starttls()
+    smtp.login('jerrytoemail@naver.com', 'QSF1GC1QCNDM')
+    name = data[0]
+    email = data[1]
+    subject = data[2]
+    content = data[3]
+    # replace로 내용을 바꿉니다.
+    subject = subject.replace('{이름}', name)
+    content = content.replace('{이름}', name)
+    
+    # try로 시도하고 에러가 나면 except 구문이 실행된다.
+    try:       
+        msg = MIMEText(content)       
+        msg['Subject'] = subject  
+        msg['From'] = 'jerrytoemail@naver.com'
+        msg['To'] = email
+        smtp.sendmail(msg['From'], msg['To'], msg.as_string())
+        smtp.quit()
+        return True
+    except Exception as e:
+        print(e)
+        return False
+
+wb = load_workbook('email.xlsx')
+ws = wb.active
+
+for row in ws.rows:
+    row_number = row[0].row
+    # 1번째는 열이름으로 제외합니다.
+    if row_number == 1:
+        continue
+    data = (row[0].value, row[1].value, row[2].value, row[3].value)
+    
+    # 발송결과가 성공이면 continue를 실행합니다.
+    if row[4].value == '성공':
+        continue
+
+    result = email_send(data)
+
+    dt = datetime.datetime.now()
+
+    # 성공했다면 
+    if result:
+        ws['E'+str(row_number)] = '성공'
+    else:
+        ws['E'+str(row_number)] = '실패'
+    ws['F'+str(row_number)] = dt.strftime('%Y-%m-%d %H:%M:%S')
+
+wb.save('email.xlsx')
+```
