--- a/10.이메일 자동화.md
+++ b/10.이메일 자동화.md
@@ -91,6 +91,46 @@ print(dt)
 print(dt.strftime('%Y-%m-%d %H:%M:%S'))
 ```
 
+## 첨부파일 추가하기
+```python
+import smtplib
+from email.mime.text import MIMEText
+# 한글 깨짐을 막기 위해서 인코딩을 합니다.
+from email.encoders import encode_base64
+# 제목에서 한글 깨짐을 막기 위해서 사용합니다.
+from email.header import Header
+from email.mime.base import MIMEBase
+# 파일 첨부를 하기 위해서 사용합니다.
+from email.mime.multipart import MIMEMultipart
+from email.utils import formatdate
+import os
+
+smtp = smtplib.SMTP('smtp.naver.com', 587)
+smtp.starttls()
+smtp.login('jerrytoemail@naver.com', 'QSF1GC1QCNDM')
+
+# MIMEMultipart 객체를 만듭니다.
+msg = MIMEMultipart()
+msg['Subject'] = Header(s='파이썬 이메일 자동화 첨부파일', charset='utf-8')
+body = MIMEText('파이썬 이메일 자동화 첨부파일입니다.', _charset='utf-8') 
+# body를 추가한다.
+msg.attach(body)   
+
+# 파일을 추가한다.
+files = ['1.jpg', '2.jpg']
+for file in files:
+    part = MIMEBase('application', 'octect-stream')
+    part.set_payload(open(file, 'rb').read())
+    encode_base64(part)
+    # 현재 컴퓨터에 있는 파일이름으로 파일이름을 정합니다.
+    part.add_header('Content-Disposition', 'attachment; filename="%s"' % os.path.basename(file))
+    msg.attach(part)
+msg['From'] = 'jerrytoemail@naver.com'
+msg['To'] = 'jerryto.email@gmail.com'
+smtp.sendmail(msg['From'], msg['To'], msg.as_string())
+smtp.quit()
+```
+
 <br/>
 <br/>
 <br/>
@@ -116,36 +156,18 @@ print(dt.strftime('%Y-%m-%d %H:%M:%S'))
 <br/>
 <br/>
 <br/>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 
 
 # 엑셀 파일에서 데이터 읽어서 업무 자동화하기
