Update 11.네이버 API 사용하기.md

--- a/11.네이버 API 사용하기.md
+++ b/11.네이버 API 사용하기.md
@@ -1,1 +1,21 @@
+* https://youtu.be/C8-SII6S4Bc?si=QknpKUDNXZ7qCaT0
+
+# 네이버 API 신청하기
+* API는 Application Programming Interface(애플리케이션 프로그램 인터페이스)의 줄임말입니다.
+* 애플리케이션은 고유한 기능을 가진 소프트웨어를 나타냅니다.
+* 인터페이스는 두 애플리케이션 간의 약속이라고 할 수 있습니다.
+* 이 약속은 요청과 응답을 사용하여 두 애플리케이션이 서로 통신하는 방법을 정의합니다.
+* 네이버 API를 사용하면 네이버에서 제공하는 다양한 검색 기능 등을 사용할 수 있습니다.
+* 네이버 개발자 센터를 검색해서 들어갑니다.
+  * https://developers.naver.com/main/
+* 애플리케이션 등록을 선택합니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/133fa004-51a8-45e8-aaea-e27bffdc9892)
+* 애플리케이션 이름을 정하고 사용 API에서 검색을 선택합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/e51c3b1c-533c-4b34-b9c3-da6be0c770b1)
+* 환경 추가에서 WEB 설정을 선택합니다.
+* http://localhost를 입력하고 등록하기를 클릭합니다.
+* 네이버 API를 사용할 때 Client ID와 Client Secret으로 인증을 합니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/f409ca5c-7d94-473b-bfe3-73b8370536fd)
+
+# 구글 코랭 링크
 
