Update 07.파이썬으로 PDF 작업하기.md

--- a/07.파이썬으로 PDF 작업하기.md
+++ b/07.파이썬으로 PDF 작업하기.md
@@ -234,7 +234,7 @@ merger.write("all.pdf")
 merger.close()
 ```
 
-## PDF를 사진을 바꾸기
+## PDF를 사진으로 바꾸기
 * PyMuPDF 라이브러리를 사용합니다.
 ```
 pip install PyMuPDF
