--- a/08.엑셀 자동화.md
+++ b/08.엑셀 자동화.md
@@ -16,7 +16,7 @@ print(openpyxl.__version__)
 * 엑셀의 구성요소인 Workbook, Sheet, Cell, Range를 잘 이해해야 합니다.
 * 엑셀에는 Workbook이라는 오브젝트(개체)가 있습니다.
 * xlsx와 같은 엑셀 파일을 Workbook 오브젝트(개체)라고 합니다.  
-* 파이썬 openpyxl에서는 엑셀 파일을 생성하거나 특정 엑셀 파일에 접근할 때, Workbook 객체를 생성하는 과정을 걷처야 합니다. 
+* 파이썬 openpyxl에서는 엑셀 파일을 생성하거나 특정 엑셀 파일에 접근할 때, Workbook 객체를 생성해야 합니다.
 * 엑셀 파일 1개에는 여러 개의 Sheet가 존재합니다.
 * 데이터를 입력할 수 있는 것이 Cell입니다. 그리고 Cell이 모여진 공간을 Sheet이라고 합니다.
 * 1개의 Workbook이 여러 개의 Sheet를 가질 수 있습니다.
@@ -59,7 +59,7 @@ from openpyxl import Workbook
 
 wb = Workbook()
 ws1 = wb.create_sheet('Sheet1')
-ws2 = wb.create_sheet('Sheet3')
+ws2 = wb.create_sheet('Sheet2')
 ws3 = wb.create_sheet('NewSheet', 1)
 wb.save('excel.xlsx')
 ```
@@ -96,7 +96,7 @@ from openpyxl import Workbook
 
 wb = Workbook() 
 ws = wb.active
-ws.cell(row=1, column=1, value='A1').value
+ws.cell(row=1, column=1, value='A1')
 wb.save('excel.xlsx')
 
 print(ws.cell(row=1, column=1).value)
