--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -1,9 +1,26 @@
-크롤링이란 사이트에 있는 정보를 코딩을 통해서 가져오는 기술을 말합니다.
-셀레니움(Selenium)이라는 프레임워크를 사용하겠습니다.
-셀레니움은 실제 브라우저를 코드를 통해서 조작하는 방식이기 때문에 우리가 직접 크롬과 같은 인터넷 브라우저를 활용하는 것과 같은 방식으로 동작합니다.
-우리가 브라우저를 통해 볼 수 있는 정보는 셀레니움을 통해서 크롤링할 수 있습니다.
-셀레니움은 크롤링뿐만 아니라 인터넷 브라우저를 통해서 할 수 있는 것을 자동화할 수 있습니다.
-구글에서 이미지를 크롤링하는 것을 알아보겠습니다.
-파이썬 가상 환경을 세팅합니다.
-셀레니움을 설치하고 브라우저를 세팅합니다.
-구글 이미지 크롤링 코드를 파이썬을 작성합니다.
+* 크롤링이란 사이트에 있는 정보를 코딩을 통해서 가져오는 기술을 말합니다.
+* 셀레니움(Selenium)이라는 프레임워크를 사용하겠습니다.
+* 셀레니움은 실제 브라우저를 코드를 통해서 조작하는 방식이기 때문에 우리가 직접 크롬과 같은 인터넷 브라우저를 활용하는 것과 같은 방식으로 동작합니다.
+* 우리가 브라우저를 통해 볼 수 있는 정보는 셀레니움을 통해서 크롤링할 수 있습니다.
+* 셀레니움은 크롤링뿐만 아니라 인터넷 브라우저를 통해서 할 수 있는 것을 자동화할 수 있습니다.
+* 구글에서 이미지를 크롤링하는 것을 알아보겠습니다.
+* 파이썬 가상 환경을 세팅합니다.
+* 셀레니움을 설치하고 브라우저를 세팅합니다.
+* 구글 이미지 크롤링 코드를 파이썬을 작성합니다.
+
+* 컴퓨터에서 설치해서 사용해보겠습니다.
+* C드라이브에 'crawling' 폴더를 만듭니다.
+* 크롬 브라우저를 사용해서 크롤링을 하겠습니다.
+* 크롬 드라이버를 설치합니다.
+* 'chromedriver'라고 검색해서 사이트에 들어갑니다.
+* 크롬 버전을 확인합니다.
+* 더보기 아이콘 > 도움말 > Chrome 정보를 순서대로 클릭합니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/33bdc484-0bb3-4eae-aecf-6e9d393d70d8)
+* 크롬 버전을 확인합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/f20e13af-58f8-4c50-8a94-3cfec84b0d5f)
+* 버전에 맞는 크롬 드라이버를 다운로드합니다.
+* 현재 123 버전이 없어서 최신 버전의 크롬 드라이버를 다운로드합니다.
+* 운영체제에 맞는 파일을 다운로드합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/453f379b-b51c-43be-8627-5cb828993ff6)
+
+
