Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -1,26 +1,94 @@
-* 크롤링이란 사이트에 있는 정보를 코딩을 통해서 가져오는 기술을 말합니다.
-* 셀레니움(Selenium)이라는 프레임워크를 사용하겠습니다.
-* 셀레니움은 실제 브라우저를 코드를 통해서 조작하는 방식이기 때문에 우리가 직접 크롬과 같은 인터넷 브라우저를 활용하는 것과 같은 방식으로 동작합니다.
-* 우리가 브라우저를 통해 볼 수 있는 정보는 셀레니움을 통해서 크롤링할 수 있습니다.
-* 셀레니움은 크롤링뿐만 아니라 인터넷 브라우저를 통해서 할 수 있는 것을 자동화할 수 있습니다.
-* 구글에서 이미지를 크롤링하는 것을 알아보겠습니다.
-* 파이썬 가상 환경을 세팅합니다.
-* 셀레니움을 설치하고 브라우저를 세팅합니다.
-* 구글 이미지 크롤링 코드를 파이썬을 작성합니다.
-
 * 컴퓨터에서 설치해서 사용해보겠습니다.
 * C드라이브에 'crawling' 폴더를 만듭니다.
 * 크롬 브라우저를 사용해서 크롤링을 하겠습니다.
 * 크롬 드라이버를 설치합니다.
+* 크롬 드라이버를 사용해서 셀레니움이 브라우저를 실행하고 조작할 수 있습니다. 
 * 'chromedriver'라고 검색해서 사이트에 들어갑니다.
 * 크롬 버전을 확인합니다.
 * 더보기 아이콘 > 도움말 > Chrome 정보를 순서대로 클릭합니다.   
 ![image](https://github.com/jerrytohub/python-skill/assets/127598703/33bdc484-0bb3-4eae-aecf-6e9d393d70d8)
-* 크롬 버전을 확인합니다.
+* 크롬 버전을 확인합니다.   
 ![image](https://github.com/jerrytohub/python-skill/assets/127598703/f20e13af-58f8-4c50-8a94-3cfec84b0d5f)
-* 버전에 맞는 크롬 드라이버를 다운로드합니다.
-* 현재 123 버전이 없어서 최신 버전의 크롬 드라이버를 다운로드합니다.
+* 버전에 맞는 크롬 드라이버를 다운로드합니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/3a04afcf-1afa-4108-9fac-1b52707f430d)
+* stable을 클릭합니다.
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/79caad2d-46c0-420d-9185-125e1eff18d0)
 * 운영체제에 맞는 파일을 다운로드합니다.
-![image](https://github.com/jerrytohub/python-skill/assets/127598703/453f379b-b51c-43be-8627-5cb828993ff6)
+
+* 크롬 드라이버 파일을 'crawling' 폴더에 놓습니다.
+* 셀레니움을 설치합니다.
+```
+pip install selenium
+```
+* https://selenium-python.readthedocs.io/ 에서 사용방법을 확인합니다.
+* 크롬 브라우저로 네이버 홈페이지에 들어가보겠습니다.
+* 아래와 같이 코딩하면 브라우저가 닫힙니다.
+```python
+from selenium import webdriver
+
+driver = webdriver.Chrome()
+driver.get('https://www.naver.com/')
+```
+
+* 옵션을 설정해야 합니다.
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+
+# 브라우저 꺼짐 방지 옵션
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
+
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.naver.com/')
+```
+
+* 구글 이미지 검색 URL을 확인합니다.
+* 구글 홈페이지에서 오른쪽 위에 있는 이미지를 클릭합니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/b6f2ad1b-5a6d-4e55-9aa8-3d4eac68b333)
+* https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl
+* F12키를 눌러서 검색창의 HTML 코드를 확인합니다.
+* 클래스 이름으로 엘리먼트를 찾아보겠습니다.
+* 셀레니움4에서는 다음과 같은 방법으로 엘리먼트를 찾습니다.
+```python
+from selenium.webdriver.common.by import By
+
+driver.find_element(By.CLASS_NAME, "")
+driver.find_element(By.ID, "")
+driver.find_element(By.CSS_SELECTOR, "")
+driver.find_element(By.NAME, "")
+driver.find_element(By.TAG_NAME, "")
+driver.find_element(By.XPATH, "")
+driver.find_element(By.LINK_TEXT, "")
+driver.find_element(By.PARTIAL_LINK_TEXT, "")
+```
+
+* gLFyf 클래스로 찾습니다.
+* send_keys로 검색어를 입력합니다.
+* send_keys(Keys.RETURN)으로 엔터키를 입력합니다.
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
+
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
+elem = driver.find_element(By.CLASS_NAME, "gLFyf")
+elem.send_keys('손흥민')
+elem.send_keys(Keys.RETURN)
+```
+
+* 구글에서 검색한 이미지를 클릭하면 큰 이미지가 나옵니다. 이 이미지를 다운로드하면 됩니다.
+* F12키를 눌러서 HTML 코드를 확인합니다.
+* 이미지의 클래스는 'rg_i Q4LuWd'입니다.
+  * ```driver.find_elements(By.CSS_SELECTOR, "")```를 사용합니다.
+* ```driver.find_elements(By.CSS_SELECTOR, ".rg_i.Q4LuWd")```
+  *  점(.)은 클래스를 나타냅니다.
+  *  rg_i.Q4LuWd는 rg_i와 Q4LuWd클래스가 같이 있다는 뜻입니다.
+
 
 
